--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash.isempty": "^4.4.0",
-    "oracledb": "^5.5.0"
+    "oracledb": "^5.5.0",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
