--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "async-es": "^3.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^4.0.1",
     "node-sass": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "^18.2.0",
+    "react-nyc-choropleth": "^1.0.6",
+    "react-router": "^6.4.4",
+    "react-router-dom": "^6.4.4",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
