--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "chart.js": "^4.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash.isempty": "^4.4.0",
     "oracledb": "^5.5.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.4",
     "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
