--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-nyc-choropleth": "^1.0.6",
     "react-router": "^6.4.4",
     "react-router-dom": "^6.4.4",
