Adding some things to dashboard

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "async-es": "^3.2.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.0.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
