--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "emmet": "^2.3.6",
     "express": "^4.17.1",
     "lodash.isempty": "^4.4.0",
     "oracledb": "^5.5.0",
